<resources>
    <string name="app_name">Simple Calculator</string>
    <string name="add">Add</string>
    <string name="multiply">Multiply</string>
    <string name="substract">Substract</string>
    <string name="divide">Divide</string>
    <string name="clear">Clear</string>
    <string name="enter_hint">Enter a number</string>
    <string name="result">The answer will be here</string>
</resources>
