<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="ca.campbell.simplecalc.MainActivity"
    android:weightSum="1">

    <EditText
        android:id="@+id/num1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/black"
        android:hint="@string/enter_hint" />
    <EditText
        android:id="@+id/num2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/black"
        android:hint="@string/enter_hint" />
    <Button
        android:id="@+id/add"
        android:layout_width="355dp"
        android:layout_height="wrap_content"
        android:onClick="addNums"
        android:text="@string/add"
        android:background="@color/grey" />
    <Button
        android:id="@+id/multiply"
        android:layout_width="355dp"
        android:layout_height="wrap_content"
        android:onClick="multiplyNums"
        android:text="@string/multiply"
        android:background="@color/grey"/>
    <Button
        android:id="@+id/divide"
        android:layout_width="355dp"
        android:layout_height="wrap_content"
        android:onClick="divideNums"
        android:text="@string/divide"
        android:background="@color/grey"/>
    <Button
        android:id="@+id/substact"
        android:layout_width="355dp"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        android:onClick="substractNums"
        android:text="@string/substract" />
    <Button
        android:id="@+id/clear"
        android:layout_width="355dp"
        android:layout_height="wrap_content"
        android:onClick="clearFields"
        android:text="@string/clear"
        android:background="@color/grey"/>
    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result" />
</LinearLayout>
